--- a/extra.html
+++ b/extra.html
@@ -33,7 +33,11 @@
 Links for more fun with French! 
       <p> <a href="http://www.bbc.co.uk/education/subjects/zgdqxnb">BBC BITESIZE</a></p>
       
-      
+      <footer class="site-footer">
+
+        <span class="site-footer-credits">FunWithFrench</span>
+      </footer>
+
 
     </section>
 
