--- a/yearvocab.html
+++ b/yearvocab.html
@@ -32,6 +32,8 @@
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>France</h3>	    
 	    
+	    <p> Listen to the audio clips below for help with pronunciation of the months and the seasons.</p>
+	    
 	   <audio controls> 
       <source src="https://clyp.it/mvoztcmw.mp3" type="audio/mpeg">
   Your browser does not support this audio element.
