--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       
 <p>To nail a new language, you have to get used to training your listening, speaking, reading and writing...<i>the main language skills!</i> </p>
 
-      <p>Have you ever been to France? It's one of the most beautiful countires <strong>ever.</strong> Lots of people base their view of France solely on Paris, however the county is <i>so</i> much more than that. There are some lovely beaches dotted all around the costs, a sand dune worth checking out in the west, plenty of authentic cute little cafes and of course, the best bakeries in the world!</p>
+      <p>Have you ever been to France? It's one of the most beautiful countires <strong>ever.</strong> Lots of people base their view of France solely on Paris, however the county is <i>so</i> much more than that. There are some lovely beaches dotted all around the costs, a sand dune worth checking out in the west, plenty of authentic cute little cafes and of course, the best bakeries in the world! Use the map below to click on the blue tags to find out information about cities in different regions of France! The map will take you wherever you navigate it...enjoy exploring!</p>
       
  <iframe src="https://www.google.com/maps/d/embed?mid=1u2mh6zghirkdGPL4jxag9TftWa4" width="640" height="480"></iframe>
 
