--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <section class="main-content">
       
 
-<p> This page is full of great, useful information, links on how to learn French and general information about Frence itself! Whether you're a beginner, have some exprience with the language or just want to brush up on your skills, you're in the right place. Our activities range from matching words to images to drag and drop. If you are quite advanced, these may be too easy for you. Feel free to check out the <a https://bhavini1.github.io/extra.html> Extra Links</a> page for other websites you may want to visit.
+<p> Whether you're a beginner, have some exprience with the language or just want to brush up on your skills, you're in the right place. Our activities range from matching words to images to drag and drop. If you are quite advanced, these may be too easy for you. Feel free to check out the <a https://bhavini1.github.io/extra.html> Extra Links</a> page for other websites you may want to visit.
+This page is full of great, useful information, links on how to learn French and general information about Frence itself! 
  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/France_Flag_Map.svg/1045px-France_Flag_Map.svg.png" style="width:450px;">   
       
 <p>To nail a new language, you have to get used to training your listening, speaking, reading and writing...<i>the main language skills!</i> </p>
