--- a/extra.html
+++ b/extra.html
@@ -33,6 +33,8 @@
       
 Links for more fun with French! 
       <p> <a href="http://www.bbc.co.uk/education/subjects/zgdqxnb">BBC BITESIZE</a></p>
+      <p> <a href="http://www.memrise.com/courses/english/french/">MEMRISE</a></p>
+      <p> <a href="https://www.duolingo.com/course/fr/en/Learn-French-Online">DUOLINGO</a></p>
       
       <footer class="site-footer">
 
