--- a/freetimevocab.html
+++ b/freetimevocab.html
@@ -31,7 +31,11 @@
       
 <iframe src="https://h5p.org/h5p/embed/46699" width="1090" height="432" frameborder="0" allowfullscreen="allowfullscreen"></iframe><script src="https://h5p.org/sites/all/modules/h5p/library/js/h5p-resizer.js" charset="UTF-8"></script>
 
-
+<audio controls> 
+      <source src="https://clyp.it/pu2tapff.mp3" type="audio/mpeg">
+  Your browser does not support this audio element.
+      </audio>  
+      
       <footer class="site-footer">
 
         <span class="site-footer-credits">FunWithFrench</span>
