--- a/extra.html
+++ b/extra.html
@@ -31,7 +31,7 @@
 <iframe src="https://h5p.org/h5p/embed/35857" width="1090" height="919" frameborder="0" allowfullscreen="allowfullscreen"></iframe><script src="https://h5p.org/sites/all/modules/h5p/library/js/h5p-resizer.js" charset="UTF-8"></script>
       
       
-Links for more fun with French! 
+Click on the links below to explore more websites and continue having fun with French! 
       <p> <a href="http://www.bbc.co.uk/education/subjects/zgdqxnb">BBC BITESIZE</a></p>
       <p> <a href="http://www.memrise.com/courses/english/french/">MEMRISE</a></p>
       <p> <a href="https://www.duolingo.com/course/fr/en/Learn-French-Online">DUOLINGO</a></p>
